[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/circle.png" type="Texture" id=1]
[ext_resource path="res://src/Objects/Coin/CoinThwackedState.gd" type="Script" id=2]
[ext_resource path="res://src/Objects/Coin/CoinStationary.gd" type="Script" id=3]
[ext_resource path="res://src/Objects/Coin/Coin.gd" type="Script" id=4]
[ext_resource path="res://src/Main/StateMachine/StateMachine.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 15.3846

[sub_resource type="Animation" id=2]
resource_name = "coin_bob"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 2, 2 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[node name="Coin" type="Area2D" groups=[
"BATTLE_OBJECTS",
"COINS",
]]
scale = Vector2( 0.519999, 0.519999 )
collision_layer = 4
collision_mask = 17
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.909804, 0.901961, 0.282353, 1 )
scale = Vector2( 1.86063, 1.86063 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ThwackCollisionArea2D" type="Area2D" parent="."]
collision_mask = 16

[node name="ThwackCollisionShape2D" type="CollisionShape2D" parent="ThwackCollisionArea2D"]
shape = SubResource( 1 )

[node name="CoinStateMachine" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = NodePath("CoinStationary")

[node name="CoinStationary" type="Node" parent="CoinStateMachine"]
script = ExtResource( 3 )

[node name="CoinThwacked" type="Node" parent="CoinStateMachine"]
script = ExtResource( 2 )

[node name="CoinAP" type="AnimationPlayer" parent="."]
anims/coin_bob = SubResource( 2 )
[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="area_shape_entered" from="ThwackCollisionArea2D" to="." method="_on_ThwackCollisionArea2D_area_shape_entered"]
